2013-02-10  Yanis Guenane  <yguenane@gmail.com>  0.1.0

  * Initial Commit
  * Install latest version of Augeas