@@ -1,8 +1,12 @@
 name    'yguenane-augeas'
-version '0.1.0'
+version '0.1.1'
 source 'https://github.com/Spredzy/puppet-augeas'
 author 'Yanis Guenane'
 license 'Apache License, Version 2.0'
 summary 'Up to date Augeas core version'
 description 'A puppet module that installs augeas latest version'
 project_page 'https://github.com/Spredzy/puppet-augeas'
+
+# Add depency
+dependency 'puppetlabs/stdlib', '>= 4.1.0'
+dependency 'yguenane/ygrpms', '>= 0.1.0'
