@@ -1,3 +1,8 @@
+2013-10-10  Yanis Guenane  <yguenane@gmail.com>  0.1.1
+
+  * The instanciation of the yum repo is not part of the module anymore
+  * A new dependence to yguenane/ygrpms has been added
+
 2013-02-10  Yanis Guenane  <yguenane@gmail.com>  0.1.0
 
   * Initial Commit
